# PX4-Cyclocopter

ROMFS/px4fmu_common/init.d/: CMakeLists.txt  rc.cc_apps  rc.cyclocopter_apps  rc.cyclocopter_defaults
boards/micoair/h743/: default.px4board
boards/px4/sitl/: default.px4board
src/modules/cc_pos_control/: CMakeLists.txt  CyclocopterPositionControl.cpp  CyclocopterPositionControl.hpp  Kconfig  MulticopterPositionControl.cpp  MulticopterPositionControl.hpp  cyclocopter_altitude_mode_params.c  cyclocopter_autonomous_params.c  cyclocopter_nudging_params.c  cyclocopter_position_control_gain_params.c  cyclocopter_position_control_limits_params.c  cyclocopter_position_control_params.c  cyclocopter_position_mode_params.c  cyclocopter_responsiveness_params.c  cyclocopter_stabilized_mode_params.c  cyclocopter_takeoff_land_params.c  multicopter_altitude_mode_params.c  multicopter_autonomous_params.c  multicopter_nudging_params.c  multicopter_position_control_gain_params.c  multicopter_position_control_limits_params.c  multicopter_position_control_params.c  multicopter_position_mode_params.c  multicopter_responsiveness_params.c  multicopter_stabilized_mode_params.c  multicopter_takeoff_land_params.c  参数对照表.txt
src/modules/cc_pos_control/GotoControl/: CMakeLists.txt  GotoControl.cpp  GotoControl.hpp
src/modules/cc_pos_control/PositionControl/: CMakeLists.txt  ControlMath.cpp  ControlMath.hpp  ControlMathTest.cpp  PositionControl.cpp  PositionControl.hpp  PositionControlTest.cpp
src/modules/cc_pos_control/Takeoff/: CMakeLists.txt  Takeoff.cpp  Takeoff.hpp  TakeoffTest.cpp
(+28 files in other folders)
